--- a/notebooks/digits_exp157.ipynb
+++ b/notebooks/digits_exp157.ipynb
@@ -130,6 +130,7 @@
     }
    ],
    "source": [
+    "# -------------------------------------------------\n",
     "# Est stats\n",
     "model_names = [\"0.0\",\"0.1\", \"0.2\", \"0.5\", \"0.6\"]\n",
     "models = [exp155, exp157_s01, exp157_s02, exp157_s05, exp157_s06]\n",
@@ -141,6 +142,8 @@
     "    np.median(exp157_s06[\"correct\"]),\n",
     "]\n",
     "\n",
+    "# -------------------------------------------------\n",
+    "# Visualize\n",
     "fig = plt.figure(figsize=(4, 2))\n",
     "grid = plt.GridSpec(1, 1, wspace=0.3, hspace=0.8)\n",
     "\n",
@@ -150,21 +153,13 @@
     "# Scatter\n",
     "for name, model in zip(model_names, models):\n",
     "    plt.scatter(x=np.repeat(name, 20), y=model[\"correct\"], color=\"black\", alpha=0.2)\n",
-    "# plt.xticks(np.array([0,1,3,4]), model_names)\n",
     "\n",
-    "# Etc\n",
+    "# Labels, etc\n",
     "plt.ylim(0, 1.1)\n",
     "plt.ylabel(\"Correct\")\n",
     "plt.xlabel(\"Leak (sigma)\")\n",
     "_ = sns.despine()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
