--- a/notebooks/test_noise_loss.ipynb
+++ b/notebooks/test_noise_loss.ipynb
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.9521, 0.1484, 0.4430, 0.0227]])\n"
+      "tensor([[0.7250, 0.1582, 0.1091, 0.9247]])\n"
      ]
     }
    ],
@@ -96,18 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OrderedDict([('fc1.weight', tensor([[-0.3427, -0.2033,  0.4842,  0.1578],\n",
-      "        [ 0.3134,  0.2830,  0.4041, -0.4798],\n",
-      "        [-0.1142,  0.2313,  0.4118, -0.2118],\n",
-      "        [-0.4191, -0.0824,  0.4373, -0.3539]])), ('fc1.bias', tensor([-0.3990, -0.2006,  0.2941, -0.3459])), ('fc2.weight', tensor([[ 0.4834,  0.4472, -0.4185,  0.0995],\n",
-      "        [ 0.0701,  0.0525,  0.2630, -0.0287]])), ('fc2.bias', tensor([ 0.3917, -0.3640]))])\n"
+      "OrderedDict([('fc1.weight', tensor([[ 0.3393, -0.1487, -0.3940, -0.0267],\n",
+      "        [ 0.0843,  0.3380, -0.3070,  0.3612],\n",
+      "        [-0.0080, -0.3376, -0.0311,  0.2769],\n",
+      "        [-0.0065, -0.2602,  0.2513, -0.0621]])), ('fc1.bias', tensor([-0.0601, -0.3608, -0.0242, -0.2862])), ('fc2.weight', tensor([[-0.2137, -0.3110, -0.2661,  0.0418],\n",
+      "        [ 0.2199,  0.1162, -0.0369,  0.1128]])), ('fc2.bias', tensor([0.0565, 0.4851]))])\n"
      ]
     }
    ],
@@ -117,19 +117,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.1261, 0.0085]], grad_fn=<AddBackward0>)\n"
+      "tensor([[-0.0436,  0.0806]], grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
    "source": [
     "print(net(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('fc1.weight', tensor([[ 0.3393, -0.1487, -0.3940, -0.0267],\n",
+      "        [ 0.0843,  0.3380, -0.3070,  0.3612],\n",
+      "        [-0.0080, -0.3376, -0.0311,  0.2769],\n",
+      "        [-0.0065, -0.2602,  0.2513, -0.0621]])), ('fc1.bias', tensor([-0.0601, -0.3608, -0.0242, -0.2862])), ('fc2.weight', tensor([[-0.2137, -0.3110, -0.2661,  0.0418],\n",
+      "        [ 0.2199,  0.1162, -0.0369,  0.1128]])), ('fc2.bias', tensor([0.0565, 0.4851]))])\n"
+     ]
+    }
+   ],
+   "source": [
+    "clone = GliaNet(4)\n",
+    "clone.load_state_dict(net.state_dict())\n",
+    "print(clone.state_dict())"
    ]
   },
   {
@@ -141,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +176,7 @@
        ")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,18 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OrderedDict([('fc1.weight', tensor([[-0.3128, -0.2219,  0.5441,  0.1779],\n",
-      "        [ 0.3258,  0.3897,  0.4004, -0.4754],\n",
-      "        [-0.2146,  0.2446,  0.3605, -0.1491],\n",
-      "        [-0.4010, -0.1423,  0.3702, -0.3478]])), ('fc1.bias', tensor([-0.3990, -0.2006,  0.2941, -0.3459])), ('fc2.weight', tensor([[ 0.5563,  0.4668, -0.5004,  0.1363],\n",
-      "        [ 0.0401,  0.1108,  0.2897, -0.1559]])), ('fc2.bias', tensor([ 0.3917, -0.3640]))])\n"
+      "OrderedDict([('fc1.weight', tensor([[ 0.2928, -0.2119, -0.3444, -0.0609],\n",
+      "        [ 0.0761,  0.3833, -0.2535,  0.3296],\n",
+      "        [-0.0302, -0.3918, -0.0610,  0.2345],\n",
+      "        [-0.0604, -0.2299,  0.2196, -0.0627]])), ('fc1.bias', tensor([-0.0601, -0.3608, -0.0242, -0.2862])), ('fc2.weight', tensor([[-0.2165, -0.3550, -0.3198,  0.0012],\n",
+      "        [ 0.1935,  0.0760, -0.0800,  0.0693]])), ('fc2.bias', tensor([0.0565, 0.4851]))])\n"
      ]
     }
    ],
@@ -186,14 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.1393, 0.0226]], grad_fn=<AddBackward0>)\n"
+      "tensor([[-0.0307,  0.0425]], grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
@@ -210,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +245,7 @@
        ")"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,18 +257,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OrderedDict([('fc1.weight', tensor([[-0.0000, -0.2219,  0.0000,  0.0000],\n",
-      "        [ 0.0000,  0.0000,  0.4004, -0.0000],\n",
-      "        [-0.2146,  0.0000,  0.0000, -0.0000],\n",
-      "        [-0.0000, -0.0000,  0.0000, -0.0000]])), ('fc1.bias', tensor([-0.3990, -0.2006,  0.2941, -0.3459])), ('fc2.weight', tensor([[0.5563, 0.0000, -0.0000, 0.1363],\n",
-      "        [0.0000, 0.0000, 0.2897, -0.0000]])), ('fc2.bias', tensor([ 0.3917, -0.3640]))])\n"
+      "OrderedDict([('fc1.weight', tensor([[ 0.2928, -0.2119, -0.3444, -0.0609],\n",
+      "        [ 0.0761,  0.3833, -0.0000,  0.3296],\n",
+      "        [-0.0302, -0.3918, -0.0610,  0.2345],\n",
+      "        [-0.0604, -0.2299,  0.2196, -0.0627]])), ('fc1.bias', tensor([-0.0601, -0.3608, -0.0242, -0.2862])), ('fc2.weight', tensor([[-0.2165, -0.3550, -0.3198,  0.0012],\n",
+      "        [ 0.1935,  0.0760, -0.0800,  0.0693]])), ('fc2.bias', tensor([0.0565, 0.4851]))])\n"
      ]
     }
    ],
@@ -271,18 +294,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Check clone"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('fc1.weight', tensor([[ 0.3393, -0.1487, -0.3940, -0.0267],\n",
+      "        [ 0.0843,  0.3380, -0.3070,  0.3612],\n",
+      "        [-0.0080, -0.3376, -0.0311,  0.2769],\n",
+      "        [-0.0065, -0.2602,  0.2513, -0.0621]])), ('fc1.bias', tensor([-0.0601, -0.3608, -0.0242, -0.2862])), ('fc2.weight', tensor([[-0.2137, -0.3110, -0.2661,  0.0418],\n",
+      "        [ 0.2199,  0.1162, -0.0369,  0.1128]])), ('fc2.bias', tensor([0.0565, 0.4851]))])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(clone.state_dict())"
+   ]
   }
  ],
  "metadata": {
