--- a/notebooks/test_noise_loss.ipynb
+++ b/notebooks/test_noise_loss.ipynb
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.7250, 0.1582, 0.1091, 0.9247]])\n"
+      "tensor([[0.3606, 0.2939, 0.8955, 0.9413]])\n"
      ]
     }
    ],
@@ -96,18 +96,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OrderedDict([('fc1.weight', tensor([[ 0.3393, -0.1487, -0.3940, -0.0267],\n",
-      "        [ 0.0843,  0.3380, -0.3070,  0.3612],\n",
-      "        [-0.0080, -0.3376, -0.0311,  0.2769],\n",
-      "        [-0.0065, -0.2602,  0.2513, -0.0621]])), ('fc1.bias', tensor([-0.0601, -0.3608, -0.0242, -0.2862])), ('fc2.weight', tensor([[-0.2137, -0.3110, -0.2661,  0.0418],\n",
-      "        [ 0.2199,  0.1162, -0.0369,  0.1128]])), ('fc2.bias', tensor([0.0565, 0.4851]))])\n"
+      "GliaNet(\n",
+      "  (fc1): Slide(in_features=4, out_features=4, bias=True)\n",
+      "  (fc2): Gather(in_features=4, out_features=2, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(net)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('fc1.weight', tensor([[-0.3687, -0.3640, -0.4445,  0.4557],\n",
+      "        [ 0.3500,  0.3443, -0.0640, -0.3020],\n",
+      "        [ 0.0855,  0.2554, -0.3448,  0.2174],\n",
+      "        [-0.4958,  0.4272,  0.3583,  0.3005]])), ('fc1.bias', tensor([-0.2882,  0.0052, -0.4574, -0.0070])), ('fc2.weight', tensor([[ 0.0156, -0.4211,  0.0527, -0.4432],\n",
+      "        [-0.2517,  0.2604, -0.1322, -0.1776]])), ('fc2.bias', tensor([-0.0076,  0.4532]))])\n"
      ]
     }
    ],
@@ -117,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.0436,  0.0806]], grad_fn=<AddBackward0>)\n"
+      "tensor([[-0.0691, -0.0426]], grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
