--- a/notebooks/digits_exp159.ipynb
+++ b/notebooks/digits_exp159.ipynb
@@ -162,7 +162,7 @@
     "    plt.scatter(x=np.repeat(name, 20), y=model[\"correct\"], color=\"black\", alpha=0.1)\n",
     "plt.ylim(0, 1.1)\n",
     "plt.ylabel(\"Mean\\ncorrect\")\n",
-    "plt.xlabel(\"Leak (std dev)\")\n",
+    "plt.xlabel(\"Wave noise (std dev)\")\n",
     "_ = sns.despine()\n",
     "\n",
     "# Median\n",
@@ -172,7 +172,7 @@
     "    plt.scatter(x=np.repeat(name, 20), y=model[\"correct\"], color=\"black\", alpha=0.1)\n",
     "plt.ylim(0, 1.1)\n",
     "plt.ylabel(\"Median\\ncorrect\")\n",
-    "plt.xlabel(\"Leak (std dev)\")\n",
+    "plt.xlabel(\"Wave noise (std dev)\")\n",
     "_ = sns.despine()"
    ]
   },
