Tweak analysis and figures for NeuralIPS paper These are close to the final

--- a/notebooks/digits_exp159_161.ipynb
+++ b/notebooks/digits_exp159_161.ipynb
@@ -393,7 +393,7 @@
     "\n",
     "# Mean\n",
     "plt.subplot(grid[0, 0])\n",
-    "plt.bar(model_names, means, color=\"grey\", alpha=0.2, width=0.8)\n",
+    "plt.bar(model_names, medians, color=\"grey\", alpha=0.2, width=0.8)\n",
     "for name, model in zip(model_names, models):\n",
     "    n = len(model[\"correct\"])\n",
     "    plt.scatter(x=np.repeat(name, n), y=model[\"correct\"], color=\"black\", alpha=0.1)\n",
